# python-sdk

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  update.sh
flame/: __init__.py  api.py  data_api.py  flame.py  flame_core.py  message_broker_api.py  note.md  storage_api.py
flame/clients/: data_api_client.py  message_broker_client.py  result_client.py
flame/federated/: aggregator_client.py  analysis_client.py  analyzer_client.py  node_base_client.py
flame/resources/: node_config.py  rest_api.py  utils.py
flame/schemas/: __init__.py
flame/templates/: aggregator_generic.py  analyzer_generic.py  main_generic.py
flame/utils/: nginx.py  token.py
flamesdk/: __init__.py  flame_core.py
flamesdk/resources/: node_config.py  rest_api.py  utils.py
project/: note.md
resources/: analysis_config.py  node_config.py  rest_api.py  utils.py
resources/clients/: data_api_client.py  message_broker_client.py  result_client.py
schemas/: __init__.py
schemas/star/: aggregator_client.py  analyzer_client.py  flame_star.py  node_base_client.py  star_model.py
schemas/templates/: analyzer_generic.py  main_generic.py
templates/: analyser.py  main.py
tests/: test_main.py
tests/test_images/: test_core_sdk_alive.py  test_core_sdk_main.py  test_image_main.py  test_query.py  test_star_model.py
tests/unit_test/: test_data_api_client.py  test_flame_logger.py  test_message.py  test_message_broker_api.py  test_message_broker_client.py  test_result_client.py  test_storage_client.py  test_util.py
to_be_deleted/flame/: api.py  flame.py  (+2 more)
(+38 files in other folders)
